# rt-week

./: .gitignore  Cargo.toml  README.md
src/: camera.rs  framebuffer.rs  hit.rs  lib.rs  main.rs  noise.rs  pdf.rs  ray.rs  render.rs  utility.rs
src/geom/: aabb.rs  bvh.rs  cube.rs  hittable_list.rs  mod.rs  onb.rs  rect.rs  sphere.rs  transform.rs  volumn.rs
src/material/: dielecric.rs  emit.rs  lambertian.rs  metal.rs  mod.rs
src/texture/: checker.rs  image.rs  mod.rs  solidcolor.rs
