[package]
name = "rt-week"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geefr-ppm = "0.2.0"
glm = "0.2.3"
rand = "0.4"
num = "0.1"
quickcheck_macros = "1.0.0"
quickcheck = "1.0.0 "
stb_image = "0.2.4"
indicatif = "0.17.2"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3